--- a/proyecto-claudio/src/App.css
+++ b/proyecto-claudio/src/App.css
@@ -1,6 +1,18 @@
 .App {
   text-align: center;
   padding: 20px;
+  
+}
+
+#superior{
+  background-color: cornsilk;
+
+}
+
+#boton{
+  border-radius: 5%;
+  border: 1px solid black;
+  background-color:palegreen;
 }
 
 .Card {
