--- a/proyecto-claudio/src/App.css
+++ b/proyecto-claudio/src/App.css
@@ -1,22 +1,55 @@
+
 .App {
   text-align: center;
   padding: 20px;
+  width: 105%;
+  
   
 }
 
+
+
+
 #superior{
   background-color: cornsilk;
+  border-radius: 15px;
 
 }
 
-#boton{
-  border-radius: 5%;
-  border: 1px solid black;
-  background-color:palegreen;
-}
+
 
 .Card {
   border: 1px solid black;
   padding: 10px;
   margin: 10px;
+}
+
+
+
+.Form imput {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.Form {
+  display: flex;
+  justify-content: center;
+}
+
+#boton {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#button:hover {
+  background-color: #0056b3;
 }
